# PenguinOS

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  bochs  build.sh  build_cross_compiler.sh  build_disk_image.sh  bx_enh_dbg.ini  commands.txt  compile_flags.txt  config.sh  debug.sh  disk.img  gdbinit  grub.cfg  launch.py  linker.ld  path.sh
base/: .profile
base/etc/: longFile.txt  reallyLongFileName.txt
programs/test/: main.cpp
scripts/: build.sh  compile.sh  config.sh
source/: Makefile  boot.asm  boot.s  kernel.c  linker.ld  main.c  main.cpp  terminal.h
source/arch/i386/: linker.ld
source/arch/i386/boot/: boot.s  crt.h  main.cpp  multiboot.h
source/arch/i386/fs/: fat.cpp  fat.h  filesystem.cpp  filesystem.h
source/arch/i386/kernel/: ata.cpp  ata.h  cmd.cpp  cmd.h  crti.s  crtn.s  gdt.cpp  gdt.h  gdt.s  ide.cpp  ide.h  idt.cpp  idt.h  idt.s  keyboard.cpp  keyboard.h  pic.cpp  pic.h  (+13 more)
source/arch/x86_64/: linker.ld
source/filesystem/: fat.cpp  fat.h  filesystem.cpp  filesystem.h  vfs.cpp  vfs.h
source/kernel/: cpuid.h  crti._s  crti.s  crtn._s  crtn.s  gdt._s  gdt.asm  gdt.c  gdt.cpp  gdt.h  gdt.s  heap.cpp  heap.h  idt.c  idt.cpp  idt.h  idt.s  io.h  isr.c  isr.h  isr.s  keyboard.c  keyboard.cpp  keyboard.h  malloc.c  malloc.h  memory.c  memory.cpp  memory.h  multiboot.h  paging.c  paging.cpp  paging.h  panic.c  pic.c  pic.cpp  pic.h  pit.cpp  pit.h  pmm.cpp  (+14 more)
source/kernel/interrupts/: idt.c  idt.h  idt.s
source/lib/: allocator.h  array.h  assert.h  bitarray.h  bitmask.h  cstring.cpp  cstring.h  ctype.h  math.h  stdio.cpp  stdio.h  stdlib.h  string.cpp  string.h
source/libc/: cstdio.cpp  cstdio.h  cstdlib.cpp  cstdlib.h  cstring.cpp  cstring.h  ctype.h  stdio.cpp  stdio.h  stdlib.h
source/libcpp/: allocator.h  array.h  assert.h  bitarray.h  compare.h  functional.h  initializerList.h  initializerlist.h  iterator.h  list.h  map.h  math.h  pair.h  pointers.h  queue.h  string.h
source/memory/: memory.cpp  memory.h
source/processes/: cmd.cpp  cmd.h  elf.cpp  elf.h  testProcess.cpp  testProcess.h
source/stdlib/: arg.h  assert.h  bitarray.h  ctype.h  io.c  io.h  list.h  math.h  memory.h  stdarg.h  stdbool.h  stdio.c  stdio.cpp  stdio.h  stdlib.c  stdlib.cpp  stdlib.h  stdmap.h  stdmem.h  string.h  system.h  terminal.h  types.h
source/system/: process.h  scheduler.cpp  scheduler.h  scheduler.s  scheduling.cpp  scheduling.h  scheduling.s  thread.cpp  thread.h
(+17 files in other folders)
